--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <guava.version>27.0.1-jre</guava.version>
         <httpclient.version>4.5.6</httpclient.version>
-        <lombok.version>1.18.6</lombok.version>        
+        <lombok.version>1.18.6</lombok.version>
+        <commons-lang3.version>3.8.1</commons-lang3.version>
+        <joda-time.version>2.10.2</joda-time.version>
+        <junit.version>4.12</junit.version>
     </properties>
 
     <dependencies>        
@@ -44,13 +47,20 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.8.1</version>
+            <version>${commons-lang3.version}</version>
         </dependency>       
+
+        <!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>${joda-time.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
