--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <lombok.version>1.18.6</lombok.version>
         <commons-lang3.version>3.8.1</commons-lang3.version>
         <joda-time.version>2.10.2</joda-time.version>
+        <spring.version>5.1.2.RELEASE</spring.version>
         <junit.version>4.12</junit.version>
     </properties>
 
@@ -30,6 +31,7 @@
             <version>${httpclient.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
@@ -57,6 +59,13 @@
             <version>${joda-time.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
