--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <commons-lang3.version>3.8.1</commons-lang3.version>
         <joda-time.version>2.10.2</joda-time.version>
         <spring.version>5.1.2.RELEASE</spring.version>
+        <pgsql-jdbc.version>42.2.6</pgsql-jdbc.version>
         <junit.version>4.12</junit.version>
     </properties>
 
@@ -66,6 +67,13 @@
             <version>${spring.version}</version>
         </dependency>
         
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${pgsql-jdbc.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
