--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <spring.version>5.1.2.RELEASE</spring.version>
         <pgsql-jdbc.version>42.2.6</pgsql-jdbc.version>
         <mysql-jdbc.version>8.0.17</mysql-jdbc.version>
+        <!--<log4j2.version>2.12.1</log4j2.version>-->
+        <log4j.version>1.2.17</log4j.version>
         <junit.version>4.12</junit.version>
     </properties>
 
@@ -82,7 +84,23 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql-jdbc.version}</version>
         </dependency>
-
+        
+        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+        <!--
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j2.version}</version>
+        </dependency>
+        -->
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
